using CustomLib.Models.Issues;

namespace CustomLib.Interfaces
{
    public interface IssuesInterface : AbstractInterface<IssueGet, IssuePost, IssuePut>
    {

    }
}
