classDiagram

    direction LR

    class AbstractInterface~TypeGet, TypePost, TypePut~ {
        <<Interface>>
        ... List(...)
        ... Post(...)
        ... Get(...)
        ... Put(...)
        TypeGet Delete(string id)
    }

    class UsersInterface["&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;UsersInterface&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"] {
        <<Interface>>
        ... List(...)
        ... Post(...)
        ... Get(...)
        ... Put(...)
        UserGet Delete(string id)
    }

    class IssuesInterface["&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;IssuesInterface&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"] {
        <<Interface>>
        ... List(...)
        ... Post(...)
        ... Get(...)
        ... Put(...)
        IssueGet Delete(string id)
    }

    class CommentsInterface["&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CommentsInterface&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"] {
        <<Interface>>
        ... List(...)
        ... Post(...)
        ... Get(...)
        ... Put(...)
        CommentGet Delete(string id)
    }
    
    AbstractInterface <|-- UsersInterface
    AbstractInterface <|-- IssuesInterface
    AbstractInterface <|-- CommentsInterface